@@ -1,5 +1,8 @@
 # vim: set noexpandtab:
 
+2013-09-25 Davide
+	* Add special signal lepton definition for 2LepWH
+
 2013-08-19 Davide
 	* Add secondary vtx mass to Jet
 
